--- a/WindowsPhone8/WorkTajm/Resources/AppResources.resx
+++ b/WindowsPhone8/WorkTajm/Resources/AppResources.resx
@@ -134,4 +134,19 @@
   <data name="AppBarMenuItemText" xml:space="preserve">
     <value>Menu Item</value>
   </data>
+  <data name="LoginLoginButton" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="LoginPassword" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="LoginRememberMe" xml:space="preserve">
+    <value>Remember me</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>Log in</value>
+  </data>
+  <data name="LoginUsername" xml:space="preserve">
+    <value>Username</value>
+  </data>
 </root>
