--- a/WindowsPhone8/WorkTajm/Resources/AppResources.resx
+++ b/WindowsPhone8/WorkTajm/Resources/AppResources.resx
@@ -270,7 +270,7 @@ Are you sure you want to logout?</value>
     <value>Remember me</value>
   </data>
   <data name="RegisterTitle" xml:space="preserve">
-    <value>Register New User</value>
+    <value>Register</value>
   </data>
   <data name="ResourceFlowDirection" xml:space="preserve">
     <value>LeftToRight</value>
@@ -374,5 +374,8 @@ Are you sure you want to logout?</value>
   </data>
   <data name="WebExceptionStatus_UnknownError" xml:space="preserve">
     <value>An exception of unknown type has occurred.</value>
+  </data>
+  <data name="RegistrationFailedTitle" xml:space="preserve">
+    <value>Registration failed</value>
   </data>
 </root>
