--- a/WindowsPhone8/WorkTajm/Resources/AppResources.resx
+++ b/WindowsPhone8/WorkTajm/Resources/AppResources.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutCustomers" xml:space="preserve">
+  <data name="SettingsCustomers" xml:space="preserve">
     <value>Customers</value>
   </data>
-  <data name="AboutProjects" xml:space="preserve">
+  <data name="SettingsProjects" xml:space="preserve">
     <value>Projects</value>
   </data>
-  <data name="AboutTimeEntries" xml:space="preserve">
+  <data name="SettingsTimeEntries" xml:space="preserve">
     <value>Time entries</value>
   </data>
   <data name="AboutTitle" xml:space="preserve">
@@ -133,16 +133,16 @@
     <value>Version</value>
   </data>
   <data name="AppBarAboutText" xml:space="preserve">
-    <value>About...</value>
+    <value>about worktajm</value>
   </data>
   <data name="AppBarAddButtonText" xml:space="preserve">
     <value>add</value>
   </data>
   <data name="AppBarLoginButtonText" xml:space="preserve">
-    <value>Login</value>
+    <value>login</value>
   </data>
   <data name="AppBarLogoutText" xml:space="preserve">
-    <value>Logout</value>
+    <value>logout</value>
   </data>
   <data name="AppBarMenuItemText" xml:space="preserve">
     <value>Menu Item</value>
@@ -377,5 +377,14 @@ Are you sure you want to logout?</value>
   </data>
   <data name="RegistrationFailedTitle" xml:space="preserve">
     <value>Registration failed</value>
+  </data>
+  <data name="SettingsAccountTitle" xml:space="preserve">
+    <value>Account</value>
+  </data>
+  <data name="AppBarSettingsText" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="SettingsUsername" xml:space="preserve">
+    <value>User name</value>
   </data>
 </root>
