--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
+
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="configure">Configure</string>
