--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
         completions."
     </string>
     <string name="title_activity_settings">Settings</string>
+    <string name="login_in_progress">Logging in...</string>
+    <string name="please_wait">Please wait...</string>
 
     <!-- Strings related to Settings -->
 
